z-index fixed for navbar drop-down menu

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -87,6 +87,7 @@
     min-width: 210px;
     border-radius: 5px;
     box-shadow: 0 0 5 rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
 .gpt3__navbar-menu_container p {
